Change title to my name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Encrypted File!!!</title>
+		<title>Mihir Kozarekar Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,8 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hi, I'm Michael Hu.</h1>
-							<p>I'm a Senior Computer Science Major at the <a href="https://umich.edu/">University of Michigan.</p>
+							<h1>Hi, I'm Mihir Kozarekar!.</h1>
+							<p>I'm a Senior studying Computer Engineering at the <a href="https://umich.edu/">University of Michigan.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Click here to view projects</a></li>
 							</ul>
@@ -131,7 +131,7 @@
 								</section> -->
 							</div>
 							<ul class="actions">
-								<li><a href="hu_michael_resume.pdf" target="_blank" rel="noopener noreferrer"class="button">Click for my resume</a></li>
+								<li><a href="mihir_kozarekar_resume.pdf" target="_blank" rel="noopener noreferrer"class="button">Click for my resume</a></li>
 							</ul>
 						</div>
 					</section>
