--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hi, I'm Mihir Kozarekar!.</h1>
+							<h1>Hi, I'm Mihir Kozarekar!</h1>
 							<p>I'm a Senior studying Computer Engineering at the <a href="https://umich.edu/">University of Michigan.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Click here to view projects</a></li>
@@ -49,11 +49,12 @@
 							<!-- <div class="video-container">
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
-							<iframe width="560" height="350" src="https://www.youtube.com/embed/66rS_n0zkHA?si=IYGYGUDSWgvMqAXc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>							<div class="content">
+							<!-- <img width="560" height="350" src="470blockdiagram.png" title="470 Block Diagram" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>							<div class="content"> -->
+							<img src="470blockdiagram.png" alt="470 Block Diagram" width="560" height="350">
 							<div class="content">
 								<div class="inner">
-									<h2>498 Project 1 BBB Sim</h2>
-									<p>With a partner, reacreated the now closed CAEN lab near the entrance of the Bob Betty Beyster Building in Unreal Engine 5. Within Unreal Engine, all interactions and logic were done with Blueprints, while work organization was done using KANBAN on Jira.  </p>
+									<h2>EECS 470 Final Project: Out-of-Order Processor</h2>
+									<p>In a group of five students, we were able to design, test, and synthesize a processor with MIPS R10K style (true) register renaming using Synopsys VCS. Our processor achieved an average cycles per instruction (CPI) of 1.82 and clock period of 19.5 ns with a 3-way superscalar design. We implemented N-way superscalar, store to load forwarding, instruction prefetcher, non-blocking instruction and data caches with load and store coalescing, 2-bit bimodal predictor, branch target buffer, and pipelined functional units. This project is a private school project so unfortunately I cannot provide a link to the code due to honor code reasons.  </p>
 									<!-- <ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
