--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
 							<!-- <img width="560" height="350" src="470blockdiagram.png" title="470 Block Diagram" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>							<div class="content"> -->
-							<img src="470blockdiagram.png" alt="470 Block Diagram" width="560" height="350">
+							<img src="470blockdiagram.png" alt="470 Block Diagram" style="margin-top: 50px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 470 Final Project: Out-of-Order Processor</h2>
