--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
 							<!-- <img width="560" height="350" src="470blockdiagram.png" title="470 Block Diagram" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>							<div class="content"> -->
-							<img src="470blockdiagram.png" alt="470 Block Diagram" style="margin-top: 50px;" width="560" height="350">
+							<img src="470blockdiagram.png" alt="470 Block Diagram" style="margin-top: 150px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 470 Final Project: Out-of-Order Processor</h2>
@@ -66,15 +66,15 @@
 							<!-- <div class="video-container">
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/aJl9dcd_82U?si=B-_FLhJT15ZNRtYR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>								<div class="inner">
-								<div class="content">	
-									<div class="inner">
-										<h2>498 Project 2 A2-GO</h2>
-											<p>With a partner, created a Pokemon Go-esk game where you earn money by planting trees that increase in money general by its age and type. Meanwhile, if a squirrel spawned nearby a tree you planted, you would subsequently lose half of all production. Additionally, there were landmarks that unlocked new types of seed. Work organization was done using Sprints and agile devlopment on Jira.  </p>
-											<!-- <ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul> -->
-									</div>
+							<img src="BDC.png" alt="Brushed DC Motor Controller" style="margin-top: 150px;" width="560" height="350">
+							<div class="content">
+								<div class="inner">
+									<h2>Brushed Motor Controller</h2>
+									<p>Developed brushed motor controller for Michigan Mars Rover team to drive up to 20 amp brushed motors. Used H-Bridge schematic design and STM32 microcontroller with CAN bus capabilities to provide logic controls to gate drivers. Helped MRover reach 4th place finish in 2023 University Rover Challenge</p>
+									<ul class="actions">
+										<li><a href="https://github.com/mihirkozy27/bdc-motor-controller" class="button">Click to see design!</a></li>
+									</ul>
+								</div>
 							</div>
 						</section>
 						<section>
