Change picture space

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
 							<!-- <img width="560" height="350" src="470blockdiagram.png" title="470 Block Diagram" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>							<div class="content"> -->
-							<img src="470blockdiagram.png" alt="470 Block Diagram" style="margin-top: 150px;" width="560" height="350">
+							<img src="470blockdiagram.png" alt="470 Block Diagram" style="margin-top: 100px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 470 Final Project: Out-of-Order Processor</h2>
@@ -66,7 +66,7 @@
 							<!-- <div class="video-container">
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
-							<img src="BDC.png" alt="Brushed DC Motor Controller" style="margin-top: 150px;" width="560" height="350">
+							<img src="BDC.png" alt="Brushed DC Motor Controller" style="margin-top: 100px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
 									<h2>Brushed Motor Controller</h2>
@@ -78,14 +78,13 @@
 							</div>
 						</section>
 						<section>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/3w7Fm7bntDs?si=nkA575X6_cu5jbLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-							<!-- <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a> -->
+							<img src="373.png" alt="Ping Pong Robot" style="margin-top: 150px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
-									<h2>Drummvr</h2>
-									<p>After tutoring another student with muscular dystrophy, one of our co-founders realized that the drums, while a fun and stimulating way to exercise key motor skills, were not always accessible. Between the inherent nature of the instrument and its rigid physical form, individuals with limited range of motion and muscular strength often struggle to find a way to play. We designed drummvr to specifically counteract these core problems, providing an impact-free VR environment with a fully customizable drumset.</p>
+									<h2>Brushed Motor Controller</h2>
+									<p>Developed brushed motor controller for Michigan Mars Rover team to drive up to 20 amp brushed motors. Used H-Bridge schematic design and STM32 microcontroller with CAN bus capabilities to provide logic controls to gate drivers. Helped MRover reach 4th place finish in 2023 University Rover Challenge</p>
 									<ul class="actions">
-										<li><a href="https://websites.umich.edu/~amszuch/project3-498/home/index.html" class="button">Click to learn more</a></li>
+										<li><a href="https://github.com/mihirkozy27/bdc-motor-controller" class="button">Click to see design!</a></li>
 									</ul>
 								</div>
 							</div>
