--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Brushed Motor Controller</h2>
-									<p>Developed brushed motor controller for Michigan Mars Rover team to drive up to 20 amp brushed motors. Used H-Bridge schematic design and STM32 microcontroller with CAN bus capabilities to provide logic controls to gate drivers. Helped MRover reach 4th place finish in 2023 University Rover Challenge</p>
+									<p>Built an autonomous and Nintendo 64 controller driveable robot in a group of 4 to launch ping pong balls up to 12 feet with 3 inch landing precision to let players practice returning variable velocity and spin serves without a partner. We created a custom bit-banged GPIO ARM assembly routine to emulate N64 proprietary protocol to communicate to controller. We derived odometry from 9 DoF IMU (I2C), edge detecting ultrasonics sensors (PWM), and motor controller data. We demonstrated this project at the Winter 23 EECS 373 expo in April of 2023!</p>
 									<ul class="actions">
-										<li><a href="https://github.com/mihirkozy27/bdc-motor-controller" class="button">Click to see design!</a></li>
+										<li><a href="https://github.com/CameronTressler/ping-pong-bot" class="button">Click to see code!</a></li>
 									</ul>
 								</div>
 							</div>
