--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<!-- <div class="video-container">
 								<iframe width="560" height="315" src="https://www.youtube.com/watch?v=z5yCqwhocy4&ab_channel=MichaelHu" frameborder="0" allowfullscreen></iframe>
 							</div> -->
-							<img src="BDC.png" alt="Brushed DC Motor Controller" style="margin-top: 100px;" width="560" height="350">
+							<img src="BDC.png" alt="Brushed DC Motor Controller" style="margin-top: 50px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
 									<h2>Brushed Motor Controller</h2>
@@ -78,7 +78,7 @@
 							</div>
 						</section>
 						<section>
-							<img src="373.png" alt="Ping Pong Robot" style="margin-top: 150px;" width="560" height="350">
+							<img src="373.png" alt="Ping Pong Robot" style="margin-top: 50px;" width="560" height="350">
 							<div class="content">
 								<div class="inner">
 									<h2>Brushed Motor Controller</h2>
@@ -95,8 +95,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>I started atending the University of Michigan in 2020 and will be graduating May 2024. 
-								Interested in information security, software engineering, and game development.
+							<p>I started attending the University of Michigan in Fall 2020 and I will be graduating in December 2024! I am interested in Computer Architectre and Processor Design. Outside of school, I love to keep up with sports, playing football and basketball regularly with my friends. I also love traveling across the world, most recently going to Hawaii for a vacation with my family! I will be taking next semester (Winter 2024) off school to intern at NVidia in Santa Clara, CA. 
 							</p>
 							<div class="features">
 								<section>
