--- a/index.html
+++ b/index.html
@@ -95,13 +95,42 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>I started attending the University of Michigan in Fall 2020 and I will be graduating in December 2024! I am interested in Computer Architectre and Processor Design. Outside of school, I love to keep up with sports, playing football and basketball regularly with my friends. I also love traveling across the world, most recently going to Hawaii for a vacation with my family! I will be taking next semester (Winter 2024) off school to intern at NVidia in Santa Clara, CA. 
+							<p>I started attending the University of Michigan in Fall 2020 and I will be graduating in December 2024! I am interested in Computer Architectre and Processor Design. Outside of school, I love to keep up with sports, playing football and basketball regularly with my friends. I also love traveling across the world, most recently going to Hawaii for a vacation with my family! I will be taking next semester (Winter 2024) off school to intern at NVIDIA in Santa Clara, CA. 
 							</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Relevant Coursework</h3>
-									<p>Augmented and Extended Reality (XR), Machine Learning, Operating Systems, Cybersecurity, Financial Math, Cryptography,Data Structures and Algorithms, Computer Organization, Probability, Statistics and Data Analysis, Computer Pragmatics, Multivariable and Vector Calculus, Matrix Algebra, Foundations of Computer Science</p>
+									<span class="icon solid major fa-briefcase"></span>
+									<h3>Professional Experience</h3>
+									<div class="experience">
+										<div class="Ampere Computing Logic Design Intern">
+											<img src="amperelogo.png" alt="Company A Logo" class="company-logo">
+											<div class="experience-info">
+												<strong>Ampere Computing</strong>
+												<p>2024 Summer Internship</p>
+											</div>
+										</div>
+										<div class="NVIDIA Performance Modeling Intern">
+											<img src="nvidialogo.png" alt="Company B Logo" class="company-logo">
+											<div class="experience-info">
+												<strong>NVIDIA</strong>
+												<p>2024 Winter Internship</p>
+											</div>
+										</div>
+										<div class="Collins Aerospace Firmware Engineering Intern">
+											<img src="collinslogo.png".png" alt="Company C Logo" class="company-logo">
+											<div class="experience-info">
+												<strong>Collins Aerospace</strong>
+												<p>2023 Summer Intern</p>
+											</div>
+										</div>
+										<div class="Ford Motor Company ESE Intern">
+											<img src="fordlogo.png" alt="Company C Logo" class="company-logo">
+											<div class="experience-info">
+												<strong>Ford Motor Company</strong>
+												<p>2022 Summer Intern</p>
+											</div>
+										</div>
+									</div>
 								</section>
 								<!-- <section>
 									<span class="icon solid major fa-lock"></span>
@@ -114,9 +143,9 @@
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section> -->
 								<section>
-									<span class="icon solid major fa-desktop"></span>
+									<span class="icon solid major fa-code"></span>
 									<h3>Technical Skills</h3>
-									<p>C++, C, Python, Java, Assembly(x86), Linux/Unix, Unreal Engine, Unity,Scripting, Git, JUnit, Spring Framework, Mock, PostgreSQL</p>
+									<p>SystemVerilog, C++, C, VHDL, Verdi, Synopsys, QuestaSim, Xilinx Vivado, Altium Designer, C++, C, Bash, Git, SVN, STM32CubeIDE</p>
 								</section>
 								<!-- <section>
 									<span class="icon solid major fa-link"></span>
