--- a/index.html
+++ b/index.html
@@ -103,28 +103,28 @@
 									<h3>Professional Experience</h3>
 									<div class="experience">
 										<div class="Ampere Computing Logic Design Intern">
-											<img src="amperelogo.png" alt="Company A Logo" class="company-logo" width="50" height="50">
+											<img src="amperelogo.png" alt="Company A Logo" class="company-logo">
 											<div class="experience-info">
 												<strong>Ampere Computing</strong>
 												<p>2024 Summer Internship</p>
 											</div>
 										</div>
 										<div class="NVIDIA Performance Modeling Intern">
-											<img src="nvidialogo.png" alt="Company B Logo" class="company-logo" width="50" height="50">
+											<img src="nvidialogo.png" alt="Company B Logo" class="company-logo">
 											<div class="experience-info">
 												<strong>NVIDIA</strong>
 												<p>2024 Winter Internship</p>
 											</div>
 										</div>
 										<div class="Collins Aerospace Firmware Engineering Intern">
-											<img src="collinslogo.png".png" alt="Company C Logo" class="company-logo" width="50" height="50">
+											<img src="collinslogo.png".png" alt="Company C Logo" class="company-logo">
 											<div class="experience-info">
 												<strong>Collins Aerospace</strong>
 												<p>2023 Summer Intern</p>
 											</div>
 										</div>
 										<div class="Ford Motor Company ESE Intern">
-											<img src="fordlogo.png" alt="Company C Logo" class="company-logo" width="50" height="50">
+											<img src="fordlogo.png" alt="Company C Logo" class="company-logo">
 											<div class="experience-info">
 												<strong>Ford Motor Company</strong>
 												<p>2022 Summer Intern</p>
