Add relevant ocursework

--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
 									<span class="icon solid major fa-code"></span>
 									<h3>Technical Skills</h3>
 									<p>SystemVerilog, C++, C, VHDL, Verdi, Synopsys, QuestaSim, Xilinx Vivado, Altium Designer, C++, C, Bash, Git, SVN, STM32CubeIDE</p>
+
+									<h3>Relevant Coursework</h3>
+									<p>Computer Architecture, Operating Systems, Digital Integrated Circuits, Embedded Systems, Data Structures & Algorithms, Computer Organization, Logic Design, Signals & Systems, Circuit Design, Discrete Mathematics, Differential Equations</p>
 								</section>
+
 								<!-- <section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Urna quis bibendum</h3>
