--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 											<ul class="icons">
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-												<li><a href="https://github.com/mbhuUM" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/mihirkozy27" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-												<li><a href="https://www.linkedin.com/in/michaelhuum/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="www.linkedin.com/in/mihir-kozarekar" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
