--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 											</div>
 										</div>
 										<div class="NVIDIA Performance Modeling Intern">
-											<img src="nvidialogo.png" alt="Company B Logo" class="company-logo">
+											<img src="nvidialogo1.png" alt="Company B Logo" class="company-logo">
 											<div class="experience-info">
 												<strong>NVIDIA</strong>
 												<p>2024 Winter Internship</p>
@@ -124,7 +124,7 @@
 											</div>
 										</div>
 										<div class="Ford Motor Company ESE Intern">
-											<img src="fordlogo.png" alt="Company C Logo" class="company-logo">
+											<img src="fordlogo1.png" alt="Company C Logo" class="company-logo">
 											<div class="experience-info">
 												<strong>Ford Motor Company</strong>
 												<p>2022 Summer Intern</p>
