--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">mbhu@umich.edu</a>
+											<a href="#">mkozarek@umich.edu</a>
 										</li>
 										<!-- <li>
 											<h3>Phone</h3>
