--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>I started attending the University of Michigan in Fall 2020 and I will be graduating in December 2024! I am interested in Computer Architectre and Processor Design. Outside of school, I love to keep up with sports, playing football and basketball regularly with my friends. I also love traveling across the world, most recently going to Hawaii for a vacation with my family! I will be taking next semester (Winter 2024) off school to intern at NVIDIA in Santa Clara, CA. 
+							<p>I started attending the University of Michigan in Fall 2020 and I will be graduating in December 2024! I am interested in Computer Architectre and Processor Design. Outside of school, I love to keep up with sports, playing football and basketball regularly with my friends. I'm also really excited for the new Kung Fu Panda movie and an upcoming vacation to Hawaii during winter break with my family! I will be taking next semester (Winter 2024) off school to intern at NVIDIA in Santa Clara, CA. 
 							</p>
 							<div class="features">
 								<section>
